--- a/index.html
+++ b/index.html
@@ -17,7 +17,33 @@
 
 <body>
 <!-- Cabecera -->
+<div class="row superior fondo">
+  <div class="small-12 medium-4 large-4 columns division clearfix">
+    <div>
+      <h3 class="float-left logo">
+        <em>1000Recetas</em>
+      </h3>
+    </div>
+    <div>
+      <h6 class="float-right logo">Gusto y Sabor</h6>
+    </div>
 
+  </div>
+  <div class="small-12 medium-8 large-8 columns show-for-medium clearfix">
+    <ul class="breadcrumbs float-right navegacion" aria-hidden="true">
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">Dulce</a>
+      </li>
+      <li>
+        <a href="#">Postres</a>
+      </li>
+      <li>Postres Rapidos</li>
+    </ul>
+  </div>
+</div>
 <!-- Fin Cabecera -->
 
 <!-- Cuerpo Lateral -->
