--- a/index.html
+++ b/index.html
@@ -64,7 +64,22 @@
             </form>
           </div>
 <!-- Barra de Navegacion -->
-      
+            <div>
+              <ul class="vertical menu menu">
+                <li>
+                  <a href="#">Recetas</a>
+                </li>
+                <li>
+                  <a href="#">Cursos</a>
+                </li>
+                <li>
+                  <a href="#">Blog</a>
+                </li>
+                <li>
+                  <a href="#">Contactenos</a>
+                </li>
+              </ul>
+            </div>
 <!-- Fin Barra de Navegacion -->
 
 <!-- Seccion Favoritos -->
