Historial de navegacion

--- a/index.html
+++ b/index.html
@@ -122,9 +122,27 @@
       </div>
     </div>
 <!-- Fin Seccion Favoritos -->
-      
+          <hr>
 <!-- Historial de Navegacion -->
-
+      <div>
+        <h5 class="subtitulos">Historial</h5>
+      </div>
+      <div>
+        <ul class="historial">
+          <li>
+            <a href="#">Postres Dulces</a>
+          </li>
+          <li>
+            <a href="#">Ponques</a>
+          </li>
+          <li>
+            <a href="#">Dieta con Jugos</a>
+          </li>
+          <li>
+            <a href="#">Postres Rapidos</a>
+          </li>
+        </ul>
+      </div>
 <!-- Fin Historial de Navegacion -->
 
 <!-- Fin Cuerpo Lateral -->
