--- a/index.html
+++ b/index.html
@@ -144,12 +144,42 @@
         </ul>
       </div>
 <!-- Fin Historial de Navegacion -->
-
+    </div>
 <!-- Fin Cuerpo Lateral -->
 
-
 <!-- Cuerpo Central -->
+<div class="small-12 medium-8 large-8 columns margen"></div>
+<!-- Articulo 1 -->
+      <div class="row columns">
+        <div class="small-12 columns">
+          <h4 class="titulos">Fruta Bañada en Chocolate Blanco</h4>
+          <h6>
+            <em>6 mayo 2018</em>
+          </h6>
+        </div>
+<div class="small-12 columns">
+<p class="text-justify parrafos">Kiwi, bananas, fresas, naranjas… puedes convertir todas tus frutas favoritas en una obra de arte para impresionar
+            a todos en tu próxima reunión. Solo sumérgelas en esta deliciosa mezcla de chocolates. ¡Lúcete!</p>
+        </div>
+        <div class="small-12 columns">
+          <h5 class="subtitulos">Ingredientes</h5>
+        </div>
+        <div class="small-12-columns parrafos">
+          <ul>
+            <li>3 (caja de 6 oz.) Barras de Chocolate Blanco, quebradas en pedazos</li>
+            <li>1 cucharada de manteca vegetal (shortening)</li>
+            <li>24 piezas pequeñas de frutas frescas (fresas, naranja, kiwi, banana o melón) limpias y secas</li>
+          </ul>
+        </div>
+        <div class="small-12 columns">
+          <a href="#" class="button alert">Preparación</a>
+        </div>
+        <div class="small-12 clearfix columns">
+          <img src="Img/FrutaBañadaEnChocolate.jpg " alt="" class="float-center">
+        </div>
+      </div>
 
+      <br>
 <!-- formulario -->
 
 <!-- fin formulario -->
