--- a/index.html
+++ b/index.html
@@ -181,7 +181,18 @@
 
       <br>
 <!-- formulario -->
-
+      <div class="row columns">
+        <div class="small-12 columns">
+          <form action="">
+            <div class="row small-12 columns">
+              <textarea name="" id="" cols="90" rows="5" placeholder="Dejanos un comentario"></textarea>
+            </div>
+            <div class="row small-12 columns ">
+              <a href="#" class="button alert">Enviar</a>
+            </div>
+          </form>
+        </div>
+      </div>
 <!-- fin formulario -->
   
       <!-- comentarios articulo 1 -->
