--- a/index.html
+++ b/index.html
@@ -196,26 +196,123 @@
 <!-- fin formulario -->
         <br>
       <!-- comentarios articulo 1 -->
-
+<div class="row columns">
 <!-- Comentario1 -->
-
+        <div class="small-12 columns comentario">
+          <div class="media-object">
+            <div class="media-object-section align-self-middle">
+              <div class="thumbnail">
+                <img src="Img/Avatar1.png">
+              </div>
+            </div>
+            <div class="media-object-section">
+              <p class="parrafos">Hola solo queria comentarles que poniendo menos azucar a la receta queda mas suve el sabor</p>
+            </div>
+          </div>
+        </div>
 <!-- comentario2 -->
-
+        <div class="small-12 columns comentario">
+          <div class="media-object">
+            <div class="media-object-section align-self-middle">
+              <div class="thumbnail">
+                <img src="Img/Avatar2.png">
+              </div>
+            </div>
+            <div class="media-object-section">
+              <p class="parrafos">Hola a todos yo probe agragando un poco de caramelo y el resultado fue muy bueno......</p>
+            </div>
+          </div>
+        </div>
 <!-- comentario3 -->
+        <div class="small-12 columns comentario">
+          <div class="media-object">
+            <div class="media-object-section align-self-middle">
+              <div class="thumbnail">
+                <img src="Img/Avatar3.png">
+              </div>
+            </div>
+            <div class="media-object-section">
+              <p class="parrafos">Hola soy nuevo en esto como mido la pisca de esencia de la que hablas??.</p>
+            </div>
+          </div>
+        </div>
 
+      </div>
 <!-- Fin Articulo 1 -->
-
+      <hr>
 <!-- Articulo 2 -->
+<div class="row columns">
+  <div class="small-12 columns">
+    <h4 class="titulos">Smoothie Mango Espinaca y Chia</h4>
+    <h6>
+      <em>25 Marzo 2018</em>
+    </h6>
+  </div>
+  <div class="small-12 columns">
+    <p class="text-justify parrafos">Las espinacas tienen un alto contenido de ácido fólico que ayudan al correcto desarrollo del feto y aumentan la cantidad
+      de leche materna en el periodo de lactación.
+      <br> Además las semillas de la chía no contienen gluten y contienen omega 3, antioxidantes y fibra lo que las vuelve saludables
+      para el día a día de cualquier persona. Además estas nutritivas semillas se pueden incorporar en cualquier comida sin
+      cambiar su sabor.
+    </p>
+  </div>
+  <div class="small-12 columns">
+    <a href="#" class="button alert">Preparación</a>
+  </div>
+  <div class="small-12 clearfix columns">
+    <img src="Img/SmoothieMangoEspinacaChia.jpg " alt="" class="float-center">
+  </div>
+  <div class="small-12 columns">
+    <h5 class="subtitulos">Ingredientes</h5>
+  </div>
+  <div class="small-12-columns">
+    <ul>
+      <li>11/2 de taza de mango congelado</li>
+      <li>1 taza de espinaca baby</li>
+      <li>1 taza de leche de almendra</li>
+      <li>1/2 taza de yoghurt griego natural</li>
+      <li>1 cucharada de chía</li>
+      <li>2 cucharaditas de miel</li>
+    </ul>
+  </div>
+</div>
 
+<br>
 <!-- formulario -->
-
+<div class="row columns">
+  <div class="small-12 columns">
+    <form action="">
+      <div class="row small-12 columns">
+        <textarea name="" id="" cols="90" rows="5" placeholder="Dejanos un comentario"></textarea>
+      </div>
+      <div class="row small-12 columns ">
+        <a href="#" class="button alert">Enviar</a>
+      </div>
+    </form>
+  </div>
+</div>
 <!-- fin formulario -->
- 
+<br>
 <!-- comentarios articulo 2 -->
-
+<div class="row columns">
+  <!-- Comentario1 -->
+  <div class="small-12 columns comentario">
+    <div class="media-object">
+      <div class="media-object-section align-middle">
+        <div class="thumbnail">
+          <img src="Img/Avatar1.png">
+        </div>
+      </div>
+      <div class="media-object-section main-section">
+        <p>Delicioso, justo para comenzar el dia, con el pie derecho</p>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- Fin Articulo 2 -->
-
+</div>
 <!-- Fin Cuerpo Central -->
+</div>
  
 
 
