--- a/index.html
+++ b/index.html
@@ -45,48 +45,49 @@
   </div>
 </div>
 <!-- Fin Cabecera -->
-  <div class="row fondo"></div>
-<!-- Cuerpo Lateral -->
-        <div class="small-12 medium-4 large-4 show-for-medium columns fondo1">
-          <div class="row columns">
-            <form action="">
-              <div class="row busqueda">
-                <div class="medium-1 columns">
-                  <a href="#">
-                    <i class="fas fa-search icons"></i>
-                  </a>
-                </div>
-                <div class="medium-10 columns">
-                  <input type="text" placeholder="Busqueda">
-                </div>
-              </div>
-        
-            </form>
+
+<div class="row fondo">
+  <!-- Cuerpo Lateral -->
+  <div class="small-12 medium-4 large-4 show-for-medium columns fondo1">
+    <div class="row columns">
+      <form action="">
+        <div class="row busqueda">
+          <div class="medium-1 columns">
+            <a href="#">
+              <i class="fas fa-search icons"></i>
+            </a>
           </div>
-<!-- Barra de Navegacion -->
-            <div>
-              <ul class="vertical menu menu">
-                <li>
-                  <a href="#">Recetas</a>
-                </li>
-                <li>
-                  <a href="#">Cursos</a>
-                </li>
-                <li>
-                  <a href="#">Blog</a>
-                </li>
-                <li>
-                  <a href="#">Contactenos</a>
-                </li>
-              </ul>
-            </div>
-<!-- Fin Barra de Navegacion -->
-  <hr>
-<!-- Seccion Favoritos -->
+          <div class="medium-10 columns">
+            <input type="text" placeholder="Busqueda">
+          </div>
+        </div>
+
+      </form>
+    </div>
+    <!-- Barra de Navegacion -->
+    <div>
+      <ul class="vertical menu menu">
+        <li>
+          <a href="#">Recetas</a>
+        </li>
+        <li>
+          <a href="#">Cursos</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Contactenos</a>
+        </li>
+      </ul>
+    </div>
+    <!-- Fin Barra de Navegacion -->
+    <hr>
+    <!-- Seccion Favoritos -->
     <div>
       <h5 class="subtitulos">Favoritos</h5>
     </div>
-    
+
     <div class="row show-for-medium medium-collapse margen">
       <div class="small-12 medium-4 columns sep">
         <a href="#">
@@ -121,197 +122,198 @@
         </a>
       </div>
     </div>
-<!-- Fin Seccion Favoritos -->
-          <hr>
-<!-- Historial de Navegacion -->
-      <div>
-        <h5 class="subtitulos">Historial</h5>
+    <!-- Fin Seccion Favoritos -->
+    <hr>
+    <!-- Historial de Navegacion -->
+    <div>
+      <h5 class="subtitulos">Historial</h5>
+    </div>
+    <div>
+      <ul class="historial">
+        <li>
+          <a href="#">Postres Dulces</a>
+        </li>
+        <li>
+          <a href="#">Ponques</a>
+        </li>
+        <li>
+          <a href="#">Dieta con Jugos</a>
+        </li>
+        <li>
+          <a href="#">Postres Rapidos</a>
+        </li>
+      </ul>
+    </div>
+    <!-- Fin Historial de Navegacion -->
+  </div>
+  <!-- Fin Cuerpo Lateral -->
+
+
+  <!-- Cuerpo Central -->
+  <div class="small-12 medium-8 large-8 columns margen">
+    <!-- Articulo 1 -->
+    <div class="row columns">
+      <div class="small-12 columns">
+        <h4 class="titulos">Fruta Bañada en Chocolate Blanco</h4>
+        <h6>
+          <em>6 mayo 2018</em>
+        </h6>
       </div>
-      <div>
-        <ul class="historial">
-          <li>
-            <a href="#">Postres Dulces</a>
-          </li>
-          <li>
-            <a href="#">Ponques</a>
-          </li>
-          <li>
-            <a href="#">Dieta con Jugos</a>
-          </li>
-          <li>
-            <a href="#">Postres Rapidos</a>
-          </li>
+      <div class="small-12 columns">
+        <p class="text-justify parrafos">Kiwi, bananas, fresas, naranjas… puedes convertir todas tus frutas favoritas en una obra de arte para impresionar
+          a todos en tu próxima reunión. Solo sumérgelas en esta deliciosa mezcla de chocolates. ¡Lúcete!</p>
+      </div>
+      <div class="small-12 columns">
+        <h5 class="subtitulos">Ingredientes</h5>
+      </div>
+      <div class="small-12-columns parrafos">
+        <ul>
+          <li>3 (caja de 6 oz.) Barras de Chocolate Blanco, quebradas en pedazos</li>
+          <li>1 cucharada de manteca vegetal (shortening)</li>
+          <li>24 piezas pequeñas de frutas frescas (fresas, naranja, kiwi, banana o melón) limpias y secas</li>
         </ul>
       </div>
-<!-- Fin Historial de Navegacion -->
-    </div>
-<!-- Fin Cuerpo Lateral -->
-
-<!-- Cuerpo Central -->
-<div class="small-12 medium-8 large-8 columns margen"></div>
-<!-- Articulo 1 -->
-      <div class="row columns">
-        <div class="small-12 columns">
-          <h4 class="titulos">Fruta Bañada en Chocolate Blanco</h4>
-          <h6>
-            <em>6 mayo 2018</em>
-          </h6>
-        </div>
-<div class="small-12 columns">
-<p class="text-justify parrafos">Kiwi, bananas, fresas, naranjas… puedes convertir todas tus frutas favoritas en una obra de arte para impresionar
-            a todos en tu próxima reunión. Solo sumérgelas en esta deliciosa mezcla de chocolates. ¡Lúcete!</p>
-        </div>
-        <div class="small-12 columns">
-          <h5 class="subtitulos">Ingredientes</h5>
-        </div>
-        <div class="small-12-columns parrafos">
-          <ul>
-            <li>3 (caja de 6 oz.) Barras de Chocolate Blanco, quebradas en pedazos</li>
-            <li>1 cucharada de manteca vegetal (shortening)</li>
-            <li>24 piezas pequeñas de frutas frescas (fresas, naranja, kiwi, banana o melón) limpias y secas</li>
-          </ul>
-        </div>
-        <div class="small-12 columns">
-          <a href="#" class="button alert">Preparación</a>
-        </div>
-        <div class="small-12 clearfix columns">
-          <img src="Img/FrutaBañadaEnChocolate.jpg " alt="" class="float-center">
-        </div>
+      <div class="small-12 columns">
+        <a href="#" class="button alert">Preparación</a>
       </div>
-
-      <br>
-<!-- formulario -->
-      <div class="row columns">
-        <div class="small-12 columns">
-          <form action="">
-            <div class="row small-12 columns">
-              <textarea name="" id="" cols="90" rows="5" placeholder="Dejanos un comentario"></textarea>
-            </div>
-            <div class="row small-12 columns ">
-              <a href="#" class="button alert">Enviar</a>
-            </div>
-          </form>
-        </div>
-      </div>
-<!-- fin formulario -->
-        <br>
-      <!-- comentarios articulo 1 -->
-<div class="row columns">
-<!-- Comentario1 -->
-        <div class="small-12 columns comentario">
-          <div class="media-object">
-            <div class="media-object-section align-self-middle">
-              <div class="thumbnail">
-                <img src="Img/Avatar1.png">
-              </div>
-            </div>
-            <div class="media-object-section">
-              <p class="parrafos">Hola solo queria comentarles que poniendo menos azucar a la receta queda mas suve el sabor</p>
-            </div>
-          </div>
-        </div>
-<!-- comentario2 -->
-        <div class="small-12 columns comentario">
-          <div class="media-object">
-            <div class="media-object-section align-self-middle">
-              <div class="thumbnail">
-                <img src="Img/Avatar2.png">
-              </div>
-            </div>
-            <div class="media-object-section">
-              <p class="parrafos">Hola a todos yo probe agragando un poco de caramelo y el resultado fue muy bueno......</p>
-            </div>
-          </div>
-        </div>
-<!-- comentario3 -->
-        <div class="small-12 columns comentario">
-          <div class="media-object">
-            <div class="media-object-section align-self-middle">
-              <div class="thumbnail">
-                <img src="Img/Avatar3.png">
-              </div>
-            </div>
-            <div class="media-object-section">
-              <p class="parrafos">Hola soy nuevo en esto como mido la pisca de esencia de la que hablas??.</p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-<!-- Fin Articulo 1 -->
-      <hr>
-<!-- Articulo 2 -->
-<div class="row columns">
-  <div class="small-12 columns">
-    <h4 class="titulos">Smoothie Mango Espinaca y Chia</h4>
-    <h6>
-      <em>25 Marzo 2018</em>
-    </h6>
-  </div>
-  <div class="small-12 columns">
-    <p class="text-justify parrafos">Las espinacas tienen un alto contenido de ácido fólico que ayudan al correcto desarrollo del feto y aumentan la cantidad
-      de leche materna en el periodo de lactación.
-      <br> Además las semillas de la chía no contienen gluten y contienen omega 3, antioxidantes y fibra lo que las vuelve saludables
-      para el día a día de cualquier persona. Además estas nutritivas semillas se pueden incorporar en cualquier comida sin
-      cambiar su sabor.
-    </p>
-  </div>
-  <div class="small-12 columns">
-    <a href="#" class="button alert">Preparación</a>
-  </div>
-  <div class="small-12 clearfix columns">
-    <img src="Img/SmoothieMangoEspinacaChia.jpg " alt="" class="float-center">
-  </div>
-  <div class="small-12 columns">
-    <h5 class="subtitulos">Ingredientes</h5>
-  </div>
-  <div class="small-12-columns">
-    <ul>
-      <li>11/2 de taza de mango congelado</li>
-      <li>1 taza de espinaca baby</li>
-      <li>1 taza de leche de almendra</li>
-      <li>1/2 taza de yoghurt griego natural</li>
-      <li>1 cucharada de chía</li>
-      <li>2 cucharaditas de miel</li>
-    </ul>
-  </div>
-</div>
-
-<br>
-<!-- formulario -->
-<div class="row columns">
-  <div class="small-12 columns">
-    <form action="">
-      <div class="row small-12 columns">
-        <textarea name="" id="" cols="90" rows="5" placeholder="Dejanos un comentario"></textarea>
-      </div>
-      <div class="row small-12 columns ">
-        <a href="#" class="button alert">Enviar</a>
-      </div>
-    </form>
-  </div>
-</div>
-<!-- fin formulario -->
-<br>
-<!-- comentarios articulo 2 -->
-<div class="row columns">
-  <!-- Comentario1 -->
-  <div class="small-12 columns comentario">
-    <div class="media-object">
-      <div class="media-object-section align-middle">
-        <div class="thumbnail">
-          <img src="Img/Avatar1.png">
-        </div>
-      </div>
-      <div class="media-object-section main-section">
-        <p>Delicioso, justo para comenzar el dia, con el pie derecho</p>
+      <div class="small-12 clearfix columns">
+        <img src="Img/FrutaBañadaEnChocolate.jpg " alt="" class="float-center">
       </div>
     </div>
+
+    <br>
+    <!-- formulario -->
+    <div class="row columns">
+      <div class="small-12 columns">
+        <form action="">
+          <div class="row small-12 columns">
+            <textarea name="" id="" cols="90" rows="5" placeholder="Dejanos un comentario"></textarea>
+          </div>
+          <div class="row small-12 columns ">
+            <a href="#" class="button alert">Enviar</a>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- fin formulario -->
+    <br>
+    <!-- comentarios articulo 1 -->
+    <div class="row columns">
+      <!-- Comentario1 -->
+      <div class="small-12 columns comentario">
+        <div class="media-object">
+          <div class="media-object-section align-self-middle">
+            <div class="thumbnail">
+              <img src="Img/Avatar1.png">
+            </div>
+          </div>
+          <div class="media-object-section">
+            <p class="parrafos">Hola solo queria comentarles que poniendo menos azucar a la receta queda mas suve el sabor</p>
+          </div>
+        </div>
+      </div>
+      <!-- comentario2 -->
+      <div class="small-12 columns comentario">
+        <div class="media-object">
+          <div class="media-object-section align-self-middle">
+            <div class="thumbnail">
+              <img src="Img/Avatar2.png">
+            </div>
+          </div>
+          <div class="media-object-section">
+            <p class="parrafos">Hola a todos yo probe agragando un poco de caramelo y el resultado fue muy bueno......</p>
+          </div>
+        </div>
+      </div>
+      <!-- comentario3 -->
+      <div class="small-12 columns comentario">
+        <div class="media-object">
+          <div class="media-object-section align-self-middle">
+            <div class="thumbnail">
+              <img src="Img/Avatar3.png">
+            </div>
+          </div>
+          <div class="media-object-section">
+            <p class="parrafos">Hola soy nuevo en esto como mido la pisca de esencia de la que hablas??.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- Fin Articulo 1 -->
+    <hr>
+    <!-- Articulo 2 -->
+    <div class="row columns">
+      <div class="small-12 columns">
+        <h4 class="titulos">Smoothie Mango Espinaca y Chia</h4>
+        <h6>
+          <em>25 Marzo 2018</em>
+        </h6>
+      </div>
+      <div class="small-12 columns">
+        <p class="text-justify parrafos">Las espinacas tienen un alto contenido de ácido fólico que ayudan al correcto desarrollo del feto y aumentan la cantidad
+          de leche materna en el periodo de lactación.
+          <br> Además las semillas de la chía no contienen gluten y contienen omega 3, antioxidantes y fibra lo que las vuelve
+          saludables para el día a día de cualquier persona. Además estas nutritivas semillas se pueden incorporar en cualquier
+          comida sin cambiar su sabor.
+        </p>
+      </div>
+      <div class="small-12 columns">
+        <a href="#" class="button alert">Preparación</a>
+      </div>
+      <div class="small-12 clearfix columns">
+        <img src="Img/SmoothieMangoEspinacaChia.jpg " alt="" class="float-center">
+      </div>
+      <div class="small-12 columns">
+        <h5 class="subtitulos">Ingredientes</h5>
+      </div>
+      <div class="small-12-columns">
+        <ul>
+          <li>11/2 de taza de mango congelado</li>
+          <li>1 taza de espinaca baby</li>
+          <li>1 taza de leche de almendra</li>
+          <li>1/2 taza de yoghurt griego natural</li>
+          <li>1 cucharada de chía</li>
+          <li>2 cucharaditas de miel</li>
+        </ul>
+      </div>
+    </div>
+
+    <br>
+    <!-- formulario -->
+    <div class="row columns">
+      <div class="small-12 columns">
+        <form action="">
+          <div class="row small-12 columns">
+            <textarea name="" id="" cols="90" rows="5" placeholder="Dejanos un comentario"></textarea>
+          </div>
+          <div class="row small-12 columns ">
+            <a href="#" class="button alert">Enviar</a>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- fin formulario -->
+    <br>
+    <!-- comentarios articulo 2 -->
+    <div class="row columns">
+      <!-- Comentario1 -->
+      <div class="small-12 columns comentario">
+        <div class="media-object">
+          <div class="media-object-section align-middle">
+            <div class="thumbnail">
+              <img src="Img/Avatar1.png">
+            </div>
+          </div>
+          <div class="media-object-section main-section">
+            <p>Delicioso, justo para comenzar el dia, con el pie derecho</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Fin Articulo 2 -->
   </div>
-</div>
-<!-- Fin Articulo 2 -->
-</div>
-<!-- Fin Cuerpo Central -->
+  <!-- Fin Cuerpo Central -->
 </div>
  
 
